--- a/workstation.yml
+++ b/workstation.yml
@@ -39,22 +39,40 @@
         gpgcheck: yes
         gpgkey: https://dl-ssl.google.com/linux/linux_signing_key.pub
 
+    - name: Add RPM Fusion repos
+      become: yes
+      dnf:
+        disable_gpg_check: yes
+        state: present
+        name:
+          - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm
+          - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
+
     - name: Update Package Metadata and Packages
-      yum:
+      become: yes
+      dnf:
         update_cache: yes
-        update_only: yes
-        state: latest
+        state: present
+
+    - name: Install Nvidia Drivers
+      become: yes
+      dnf:
+        state: present
+        name:
+          - akmod-nvidia
+          - xorg-x11-drv-nvidia-cuda
 
     - name: Install Packages
       become: yes
-      yum:
+      dnf:
         state: present
         name:
           - blender
+          - buildah
           - code
           - dnf-plugin-system-upgrade
           - dotnet
-          - ffmpeg
+          - fira-code-fonts
           - gimp
           - gnome-extensions-app
           - gnome-tweaks
@@ -71,9 +89,11 @@
           - libva-vdpau-driver
           - nodejs
           - perl-Image-ExifTool
+          - podman
           - postgresql-server
           - postgresql-upgrade
+          - python3-ansible-lint
           - rawtherapee
+          - teams
           - tmux
           - vdpauinfo
-          - vlc
