--- a/roles/fedora_workstation/tasks/main.yml
+++ b/roles/fedora_workstation/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Set hostname
+  when: hostname | length > 0 and domain | length > 0
+  become: yes
+  hostname:
+    name: '{{ hostname }}.{{ domain }}'
+    use: systemd
+
 - name: Add VSCode Repo
   become: yes
   yum_repository:
