--- a/roles/fedora_workstation/tasks/main.yml
+++ b/roles/fedora_workstation/tasks/main.yml
@@ -131,6 +131,24 @@
       - ncurses-libs.i686
       - bzip2-libs.i686
 
+- name: Install VM acceleration dependencies for Android Emulator
+  become: yes
+  dnf:
+    state: present
+    name:
+      - bridge-utils
+      - libvirt
+      - virt-install
+      - qemu-kvm
+
+- name: Start and Enable libvirtd
+  become: yes
+  systemd:
+    state: started
+    enabled: yes
+    name: libvirtd
+
+# You may need to enable VT-D or VT-x or SVM in your bios - you should see that /dev/kvm exists
 # Android Studio requires accepting Terms and Conditions - so not automating this now
 
 #    - name: Setup SSH Key (create / add to remotes?)
