start to build script that can be used to initialize a fresh install also try to improve file naming consistency

--- a/roles/fedora_base/tasks/main.yml
+++ b/roles/fedora_base/tasks/main.yml
@@ -5,3 +5,9 @@
   hostname:
     name: '{{ hostname }}.{{ domain }}'
     use: systemd
+
+- name: Add SSH public keys
+  authorized_key:
+    user: mmorano
+    state: present
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub')) }}"
