avoid lint warning on the update all task

--- a/roles/fedora_init/tasks/main.yml
+++ b/roles/fedora_init/tasks/main.yml
@@ -5,6 +5,7 @@
     update_cache: yes
     name: '*'
     state: latest
+  tags: skip_ansible_lint
 
 - name: add ssh public keys
   ansible.builtin.authorized_key:
