fully qualify module

--- a/roles/fedora_base/tasks/os.yml
+++ b/roles/fedora_base/tasks/os.yml
@@ -10,7 +10,7 @@
 
 - name: Install Packages
   become: yes
-  dnf:
+  ansible.builtin.dnf:
     state: present
     name:
       - dnf-plugin-system-upgrade
