--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -2,10 +2,15 @@
 hostname: vmtest
 
 ssh_host: yes
-allow_ssh_users: user1 user2
+allow_ssh_users: user1 user2 test_svc_account
 
 firewall_allowed_services:
   - http
   - https
 
 firewall_denied_services:
+
+service_accounts:
+  - username: test_svc_account
+    groups: wheel
+    password: "{{ vault_password_vmtest_test_svc_account }}"
