--- a/roles/fedora_server/tasks/main.yml
+++ b/roles/fedora_server/tasks/main.yml
@@ -5,3 +5,6 @@
 - name: Import podman.yml
   ansible.builtin.import_tasks: podman.yml
   when: podman_host
+
+- name: Import service_accounts.yml
+  ansible.builtin.import_tasks: service_accounts.yml
