provide hook so that service accounts can be configured to allow ssh

--- a/roles/fedora_server/tasks/service_accounts.yml
+++ b/roles/fedora_server/tasks/service_accounts.yml
@@ -8,3 +8,28 @@
     update_password: always
     state: present
   loop: "{{ service_accounts if service_accounts is iterable else [] }}"
+
+- name: add ssh public keys
+  become: yes
+  ansible.builtin.authorized_key:
+    user: "{{ item.username }}"
+    state: present
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ed25519.pub') }}"
+  loop: "{{ service_accounts if service_accounts is iterable else [] }}"
+  when: item.allow_ssh
+
+# todo: naive approach below will duplicate usernames each time this is run
+- name: add user to sshd AllowUsers
+  become: yes
+  ansible.builtin.lineinfile:
+    path: "/etc/ssh/sshd_config"
+    backup: yes
+    backrefs: yes
+    regex: "^AllowUsers\\s+(.*)$"
+    line: "AllowUsers \\1 {{ item.username }}"
+    state: present
+    validate: sshd -t -f %s
+  loop: "{{ service_accounts if service_accounts is iterable else [] }}"
+  when: item.allow_ssh
+  notify:
+    - reload sshd
