--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -2,7 +2,7 @@
 hostname: vmtest
 
 ssh_host: yes
-allow_ssh_users: user1 user2 test_svc_account
+allow_ssh_users: user1 user2
 
 firewall_allowed_services:
   - http
@@ -14,3 +14,4 @@ service_accounts:
   - username: test_svc_account
     groups: wheel
     password: "{{ vault_password_vmtest_test_svc_account }}"
+    allow_ssh: yes
