enable session linger for podman service accounts

--- a/roles/fedora_server/tasks/podman.yml
+++ b/roles/fedora_server/tasks/podman.yml
@@ -18,3 +18,10 @@
       - "{{ item.username }}"
   loop: "{{ service_accounts if service_accounts is iterable else [] }}"
   when: item.use_podman
+
+- name: Enable linger for rootless containers
+  become: yes
+  ansible.builtin.command:
+    cmd: loginctl enable-linger {{ item.username }}
+  loop: "{{ service_accounts if service_accounts is iterable else [] }}"
+  when: item.use_podman
