--- a/roles/fedora_server/tasks/main.yml
+++ b/roles/fedora_server/tasks/main.yml
@@ -8,3 +8,7 @@
 - name: Import podman.yml
   ansible.builtin.import_tasks: podman.yml
   when: podman_host
+
+- name: Import ddclient.yml
+  ansible.builtin.import_tasks: ddclient.yml
+  when: ddclient_host
