disable setting up ddclient on the test vm

--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -31,7 +31,7 @@ service_accounts:
 
 podman_host: yes
 
-ddclient_host: yes
+ddclient_host: no
 ddclient_svc_account: svc_ddclient
 ddclient_svc_account_password: "{{ vault_password_vmtest_svc_ddclient }}"
 ddclient_namecheap_password: "{{ vault_namecheap_password }}"
