fully qualify include_role

--- a/playbook_workstations.yml
+++ b/playbook_workstations.yml
@@ -4,9 +4,9 @@
 
   tasks:
     - name: Configure Base
-      include_role:
+      ansible.builtin.include_role:
         name: fedora_base
 
     - name: Configure Workstation
-      include_role:
+      ansible.builtin.include_role:
         name: fedora_workstation
