--- a/playbook_servers.yml
+++ b/playbook_servers.yml
@@ -4,9 +4,9 @@
 
   tasks:
     - name: Configure Base
-      include_role:
+      ansible.builtin.include_role:
         name: fedora_base
 
     - name: Configure Server
-      include_role:
+      ansible.builtin.include_role:
         name: fedora_server
