--- a/roles/fedora_server/tasks/service_accounts.yml
+++ b/roles/fedora_server/tasks/service_accounts.yml
@@ -32,4 +32,7 @@
   loop: "{{ service_accounts if service_accounts is iterable else [] }}"
   when: item.allow_ssh
   notify:
-    - reload sshd
+    - "reload_sshd"
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
