--- a/roles/fedora_base/handlers/main.yml
+++ b/roles/fedora_base/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
-- name: reload sshd
+- name: Reload sshd
   become: yes
   ansible.builtin.service:
     name: sshd
     state: reloaded
+  listen: "reload_sshd"
