--- a/roles/fedora_server/tasks/main.yml
+++ b/roles/fedora_server/tasks/main.yml
@@ -12,3 +12,7 @@
 - name: Import ddclient.yml
   ansible.builtin.import_tasks: ddclient.yml
   when: ddclient_host
+
+- name: Import mawus.yml
+  ansible.builtin.import_tasks: mawus.yml
+  when: mawus_host
