--- a/playbook_workstations.yml
+++ b/playbook_workstations.yml
@@ -7,6 +7,10 @@
       ansible.builtin.include_role:
         name: fedora_base
 
+    - name: Configure Firewall
+      ansible.builtin.include_role:
+        name: fedora_firewall
+
     - name: Configure Workstation
       ansible.builtin.include_role:
         name: fedora_workstation
