--- a/host_vars/lvmtest.yml
+++ b/host_vars/lvmtest.yml
@@ -3,17 +3,24 @@
 hostname: lvmtest
 update_packages: no
 
-# firewall
-firewall_allowed_services:
+# ddclient
+ddclient_config:
+  service_account:
+    username: svc_ddclient
+    password: "{{ vault_password_vmtest_svc_ddclient }}"
+    groups:
+    allow_ssh: yes
+    use_podman: yes
+    subuid: 300000-365536
+    subgid: 300000-365536
+  namecheap_password: "{{ vault_namecheap_password }}"
+
+# mikeandwan.us
+mawus_firewall_allowed_services:
   - http
   - https
 
-firewall_denied_services:
-
-# server
-
-
-ssh_host: yes
+mawus_firewall_denied_services:
 
 # subuid / subgid hopefully coming to user module eventually
 # https://github.com/ansible/ansible/issues/68199
@@ -36,10 +43,7 @@ service_accounts:
 
 podman_host: yes
 
-ddclient_host: no
-ddclient_svc_account: svc_ddclient
-ddclient_svc_account_password: "{{ vault_password_vmtest_svc_ddclient }}"
-ddclient_namecheap_password: "{{ vault_namecheap_password }}"
+
 
 mawus_host: yes
 mawus_svc_account: svc_www_maw
