add port forwarding from host to containers/pod

--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -9,6 +9,9 @@
     - photos.mikeandwan.us
     - www.mikeandwan.us
 
+- name: Include port_mapping.yml
+  ansible.builtin.include_tasks: port_mapping.yml
+
 - name: "Temporarily set SSH username to {{ mawus_svc_account }}"
   ansible.builtin.set_fact:
     orig_ansible_user: "{{ ansible_user }}"
